--- a/index1.html
+++ b/index1.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html >
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Travel India - Home</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" crossorigin="anonymous">
@@ -47,21 +46,21 @@
         }
 
         .input button {
-            padding: 8px 12px; /* Decreased padding */
+            padding: 8px 12px;
             border-radius: 5px;
             border: none;
-            background-color: #ff5733; /* Base color */
+            background-color: #ff5733; 
             color: white;
             font-weight: bold;
             cursor: pointer;
-            transition: background-color 0.3s, transform 0.3s; /* Smooth transition */
-            font-size: 0.9rem; /* Decreased font size */
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Shadow effect */
+            transition: background-color 0.3s, transform 0.3s;
+            font-size: 0.9rem; 
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
         }
 
         .input button:hover {
-            background-color: #e04e20; /* Darker shade on hover */
-            transform: scale(1.05); /* Slightly enlarge on hover */
+            background-color: #e04e20; 
+            transform: scale(1.05);
         }
 
         .img-container {
@@ -100,25 +99,25 @@
         }
 
         .card button {
-            padding: 8px 12px; /* Decreased padding */
+            padding: 8px 12px; 
             border-radius: 5px;
             border: none;
-            background-color: #007bff; /* Bootstrap primary color */
+            background-color: #007bff; 
             color: white;
             font-weight: bold;
             cursor: pointer;
-            transition: background-color 0.3s, transform 0.3s; /* Smooth transition */
-            font-size: 0.9rem; /* Decreased font size */
-            margin-top: 10px; /* Space between image and button */
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Shadow effect */
+            transition: background-color 0.3s, transform 0.3s;
+            font-size: 0.9rem;
+            margin-top: 10px; 
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
         }
 
         .card button:hover {
-            background-color: #0056b3; /* Darker shade on hover */
-            transform: scale(1.05); /* Slightly enlarge on hover */
+            background-color: #0056b3; 
+            transform: scale(1.05); 
         }
 
-        /* Responsive Design */
+       
         @media (max-width: 768px) {
             .title {
                 flex-direction: column;
